fix overflow chat

--- a/src/App.css
+++ b/src/App.css
@@ -293,6 +293,11 @@ body {
 
 /*  Room Chat START ------------------------------------------------------*/
 
+.makeStyles-chatWindow-4{
+  max-height: 100%;
+  overflow: scroll;
+}
+
 /*  Room Chat END ------------------------------------------------------*/
 
 
